# HealthTech

./: .dockerignore  .env.example  .env.track2  .env.track2.example  .flake8  .gitignore  .pre-commit-config.yaml  BACKEND_AUTH_SUMMARY.md  BACKEND_DEPLOYMENT_INSTRUCTIONS.md  DHIS2_REAL_CONNECTION_GUIDE.md  Docker-compose.yml  Dockerfile.railway.track1  Dockerfile.railway.track2  Dockerfile.template  Dockerfile.track2  Dockerfile.track3  FRONTEND_DASHBOARD_FIX_SUMMARY.md  FRONTEND_NO_MOCK_DATA_COMPLETE.md  FRONTEND_TRACK3_INTEGRATION_SUMMARY.md  MONGODB_ARCHITECTURE.md  README.md  REAL_TIME_MONITORING_DASHBOARD_COMPLETE.md  SMS_CREDENTIAL_DELIVERY_SUMMARY.md  TRACK2_DEPLOYMENT_GUIDE.md  TRACK2_DOCKER_DEPLOYMENT.md  TRACK2_RAILWAY_FIX.md  TRACK3_BACKEND_COMPREHENSIVE_FIX.md  TRACK3_BACKEND_FIX_SUMMARY.md  TRACK3_RAILWAY_DEPLOYMENT_GUIDE.md  TRACKS_DEPLOYMENT.md  check_deployment_status.sh  deploy-to-railway.sh  deploy_all_tracks_railway.sh  deploy_backends_railway.sh  deploy_frontend_dashboard_fix.sh  deploy_frontend_fix.sh  deploy_frontend_update.sh  deploy_track1.sh  deploy_track1_railway.sh  deploy_track2.sh  (+36 more)
.github/workflows/: ci.yml  pull-request.yml  security-monitoring.yml
analysis/: Dockerfile  README.md  main.py  requirements.txt
auth/: .env.example  REAM.md  SECURITY_FEATURES.md  database.py  deps.py  main.py  models.py  requirements.txt  schemas.py  utils.py
auth/app/: __init__.py  config.py  main.py
auth/hospital_auth/: requirements.txt
auth/routers/: auth.py  roles.py  users.py
chatbot/: .env.example  Dockerfile  Dockerfile.railway  main.py  main_simple.py  railway.toml  requirements.txt
chatbot/DT_explanation/: create_datasets.py  main.py
chatbot/patient_support/: IMPLEMENTATION_SUMMARY.md  README.md  app.py  requirements.txt
data/: .env.example  auth_deps.py  database.py  main.py  requirements.txt
deployment/: railway-deployment.md  railway-env-config.json
event/: .env.example  main.py
feedback/: .env.example  Dockerfile  auth_deps.py  docker-compose.yml  dockerfile.production  main.py  requirements.txt
feedback-reminder-system/: README.md
feedback-reminder-system/feedback-ui-service/: Dockerfile  README.md  deploy_frontend_track3.sh  fresh_deploy.sh  netlify.toml  netlify.toml.backup  next.config.js  package-lock.json  package.json
feedback-reminder-system/mobile/: .env.example  .gitignore  Dockerfile  README.md  app.json  package-lock.json  package.json
feedback-reminder-system/reminder-service/: Dockerfile  README.md  package-lock.json  package.json
feedback-reminder-system/track3-backend/: .env.example  .railwayignore  API_DOCUMENTATION.md  Dockerfile  auth_deps.py  dhis2_integration.py  main.py  models.py  railway.toml  requirements.txt
feedback/feedback-service/: .dockerignore  dockerfile  (+4 more)
forecast/: CLINICAL_DATA_GUIDE.md  PROJECT_STATUS.md  README.md  clinical_models.py  download_models.py  forecasting.py  ingestion.txt  main.py  requirements.txt
notification/: .env.example  README.md  auth_deps.py  main.py  requirements.txt
optimization/: API_EXAMPLES.md  auth_deps.py  database.py  main.py  mock_database.py  models.py  requirements.txt
reminder/: .env.example  Dockerfile  README.md  auth_deps.py  main.py  requirements.txt
scripts/: deploy.sh  lint.sh  mongo-init.js  mongodb_manager.py  populate_databases.py  populate_donations_requests.sh  populate_real_databases.py  populate_requests.sh  populate_track1.sh  populate_track3.sh
sentiment-api/: openapi.yaml
track3-blood-bank-system/: main.py  requirements.txt
track3-railway-config/: railway.toml
translation/: .env.example  main.py
(+396 files in other folders)
